<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:gravity="center"
                android:text="@string/movie_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="250sp"
                android:layout_height="350sp"
                android:layout_gravity="center"
                android:layout_marginTop="16sp"
                android:maxWidth="250sp"
                android:src="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtAno2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/movie_year"
                        android:layout_marginRight="8dp" />

                    <TextView
                        android:id="@+id/duracao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/movie_runtime"
                        />

                    <RatingBar
                        android:id="@+id/avaliacao"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/genero"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_gravity="center"
                android:layout_marginTop="8sp"
                android:text="@string/movie_genre" />

            <TextView
                android:id="@+id/enredo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:gravity="center"
                android:text="@string/plot"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/SectionLine"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/txtEnredo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="4sp"
                android:layout_marginEnd="16dp"
                android:text="@string/movie_plot"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:gravity="center"
                android:text="Information"

                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/SectionLine2"
                android:layout_width="match_parent"
                android:layout_height="1sp"

                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:orientation="horizontal"
                android:layout_marginLeft="16sp">

                <TextView
                    android:id="@+id/tvdtr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nomeDiretor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2sp"
                    android:text="@string/movie_director"
                    android:layout_marginLeft="2sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="8sp"
                android:orientation="horizontal"
                android:layout_marginLeft="16sp">

                <TextView
                    android:id="@+id/tvwrt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writers"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/escritorres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2sp"
                    android:text="@string/movie_writers"
                    android:layout_marginLeft="2sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="8sp"
                android:orientation="horizontal"
                android:layout_marginLeft="16sp">

                <TextView
                    android:id="@+id/tvact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actors"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/atores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2sp"
                    android:text="@string/movie_actors"
                    android:layout_marginLeft="2sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/SectionLine3"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:orientation="horizontal"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>